Refactor environment variable management and update .gitignore

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 
 # Put your Supabase databse UTI below - make sure to replace the password placeholder with your own password
-DATABASE_URL=
+DATABASE_URL="postgresql://postgres.tipkocpvcuhnuldmvyyq:Tlsdkstks3*@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
 
 ## Put the URL of the excel file containing the URLs of the SKKU website
 EXCEL_URL="https://camphouse.me/assets/bin/skku-urls.xlsx"
