.env 파일에 Azure OpenAI API 키 및 모델 추가, indexing.ipynb의 실행 카운트 업데이트

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ DATABASE_URL="postgresql://postgres.tipkocpvcuhnuldmvyyq:Tlsdkstks3*@aws-0-ap-so
 
 ## Put the URL of the excel file containing the URLs of the SKKU website
 EXCEL_URL="https://camphouse.me/assets/bin/skku-urls.xlsx"
+
+AZURE_OPENAI_API_KEY= 18304fa848224cc8afb6fd69f5e82a87
+AZURE_OPENAI_ENDPOINT= https://firsthai-choongwon.openai.azure.com/
+
+AZURE_GENERATION_MODEL=gpt-4o
+AZURE_GENERATION_MODEL_VERSION=2024-08-01-preview
+AZURE_EMBEDDING_MODEL=text-embedding-ada-002
